# virtual-pet

./: .gitignore  CMakeLists.txt  CMakePresets.json  IDEAS.md  Ideas.txt  Pet.cpp  Pet.h  README.md  main.cpp  vcpkg.json
src/: Cat.cpp  Cat.h  Dog.cpp  Dog.h  Pet.cpp  Pet.h  main.cpp
